--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
+    "build": "strapi buildnp",
     "strapi": "strapi"
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.1.7",
-    "@strapi/plugin-users-permissions": "4.1.7",
+    "@strapi/plugin-graphql": "^4.1.7",
     "@strapi/plugin-i18n": "4.1.7",
+    "@strapi/plugin-users-permissions": "4.1.7",
+    "@strapi/provider-upload-cloudinary": "^4.1.7",
+    "@strapi/strapi": "4.1.7",
     "better-sqlite3": "7.4.6"
   },
   "author": {
