--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.1.7",
     "@strapi/provider-upload-cloudinary": "^4.1.7",
     "@strapi/strapi": "4.1.7",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "strapi-plugin-transformer": "^2.0.1"
   },
   "author": {
     "name": "A Strapi developer"
