--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 ############################
+#  FOR DEPLOYMENT IN HEROKU
+############################
+
+package-lock.json
+
+
+############################
 # OS X
 ############################
 
