--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #  FOR DEPLOYMENT IN HEROKU
 ############################
 
-package-lock.json
+# package-lock.json
 
 ############################
 # OS X
