changes made to redeploy in heroku

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ############################
-#  FOR DEPLOYMENT IN HEROKU
+#  FOR DEPLOYMENT IN HEROKU\
+
+package-lock.json
 ############################
 
 # package-lock.json
