git ignore package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 ############################
+# HEROKU DEPLOYMENT PURPOSES
+
+package-lock.json
+
+############################
+
+############################
 # OS X
 ############################
 
