--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "^4.3.8",
-    "@strapi/plugin-users-permissions": "^4.3.8",
-    "@strapi/provider-upload-cloudinary": "^4.3.8",
+    "@strapi/plugin-i18n": "^4.3.9",
+    "@strapi/plugin-users-permissions": "^4.3.9",
+    "@strapi/provider-upload-cloudinary": "^4.3.9",
     "@strapi/strapi": "^4.3.9",
     "pg": "^8.7.3",
     "pg-connection-string": "^2.5.0",
@@ -21,7 +21,7 @@
     "strapi-plugin-transformer": "^2.0.1"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Francisco Javier Roca"
   },
   "strapi": {
     "uuid": "f3100e32-f3a7-45c3-aab6-69131e16758a"
