--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "develop": "strapi develop --watch-admin",
     "start": "strapi start",
+    "start:prod": "NODE_ENV=production strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
