--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,29 @@
-HOST=0.0.0.0
-PORT=1337
+# SERVER
+
+HOST=
+PORT=
 APP_KEYS=
+
+
+# ADMIN
+
+ADMIN_JWT_SECRET=
+API_TOKEN_SALT=
+JWT_SECRET=
+
+# DATABASE
+
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+
+# CLOUDINARY
+
+CLOUDINARY_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
+
+
+
