--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "develop": "strapi develop --watch-admin",
+    "develop": "NODE_ENV=development strapi develop",
     "start": "strapi start",
     "start:prod": "NODE_ENV=production strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "^4.3.9",
-    "@strapi/plugin-users-permissions": "^4.3.9",
-    "@strapi/provider-upload-cloudinary": "^4.3.9",
-    "@strapi/strapi": "^4.3.9",
-    "pg": "^8.7.3",
+    "@strapi/plugin-i18n": "^4.5.6",
+    "@strapi/plugin-users-permissions": "^4.5.6",
+    "@strapi/provider-upload-cloudinary": "^4.5.6",
+    "@strapi/strapi": "^4.5.6",
+    "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
     "strapi-plugin-import-export-entries": "^1.18.0",
-    "strapi-plugin-navigation": "^2.0.13",
-    "strapi-plugin-transformer": "^2.0.1"
+    "strapi-plugin-navigation": "^2.2.3",
+    "strapi-plugin-transformer": "^2.2.0"
   },
   "author": {
     "name": "Francisco Javier Roca"
