Change database configutation changing variable names for deployment

--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,12 @@ JWT_SECRET=
 
 # DATABASE
 
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_NAME=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
+PGDATABASE=
+PGHOST=
+PGPASSWORD=
+PGPORT=
+PGUSER=
+
 
 # CLOUDINARY
 
