--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "develop": "NODE_ENV=development strapi develop",
-    "start": "strapi start",
+    "start": "strapi develop",
     "start:prod": "NODE_ENV=production strapi start",
     "build": "strapi build",
     "strapi": "strapi"
